tests/fixtures/invalid/bytes_bitor_bool.py
# Cannot bitwise OR Bytes and Bool
x: bytes = b"hello" | True
